wajig (2.01) unstable; urgency=low

  * INSTALLR, INSTALLRS: 'apt-get install' now installs Recommends by default,
    making these options redundant.
  * INSTALL, INSTALLS: add -r|--recommends and -R|--norecommends options.
  * INSTALLS: add -n|--noauth and -y|--yes options.
  * Add meself to Uploaders field in debian/control.
  * Change versioning from 3 digits to 2. There wasn't much meaning there.

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 20 Oct 2010 22:28:53 +0200

wajig (2.0.50.1) unstable; urgency=low

  * Fix (an embarassing) exception exposed by LIST-COMMANDS, DOCUMENTATION, ...

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 13 Oct 2010 16:15:59 +0200

wajig (2.0.50) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]

  * VERIFY: Add a check for debsums before running the command, and add
    a Suggests on it.
  * PURGE: use apt-get instead of dpkg, in order to get a yes/no prompt.
  * LIST-LOG: Remove custom logging implementation
    - was fragile: sometimes info was lost during a run
    - was expensive: checked system cache both before and after the
      operation to determine what happened; it also did this for commands
      which didn't even change the system cache
    - did not log cache changes when they were done by other tools
      (apt, aptitude, & synaptic)
    - APT log looks much better
  * SHOW: use aptitude instead of apt-cache
    - the output is prettier
    - better virtual package handling; it displays real packages that provide
      the functionality implied by that virtual package, instead of just
      vomiting "package not found!"
    - only displays info on the installed version; else, the latest available;
      apt-get showed all available versions
    - the trade-off is that the command is a bit slower, but what's the rush :)
  * LIST-RECOMMENDED: new command that displays packages which are
    auto-installed via Recommends, and are without installed dependencies.
    (Closes: #482147)